results/classifier/zero-shot/105/instruction/1460523
instruction: 0.844
device: 0.795
mistranslation: 0.745
vnc: 0.629
graphic: 0.603
socket: 0.602
network: 0.589
semantic: 0.555
other: 0.403
KVM: 0.318
boot: 0.276
assembly: 0.242

target-arm/op_helper.c:424: bad assert

/home/dcb/qemu/trunk/qemu/target-arm/op_helper.c: In function ‘helper_access_check_cp_reg’:
/home/dcb/qemu/trunk/qemu/target-arm/op_helper.c:424:52: error: comparison of constant ‘3’ with boolean expression is always false [-Werror=bool-compare]
         assert(!arm_is_secure(env) && !arm_current_el(env) == 3);
                                                    ^

Maybe

 assert(!arm_is_secure(env) && arm_current_el(env)  != 3);

Fixed by commit 3fc827d591679f3e262b9d1f8b34528eabfca8c0

